Fix: MIME type mismatch error

--- a/register.html
+++ b/register.html
@@ -38,6 +38,6 @@
         <p>Students Trained Certified</p>
     </div>
 </div>
-<script src="app.js"></script>
+<script src="js/app.js"></script>
 </body>
 </html>
