--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>E-Learning Platform</title>
-    <script src="app.js"></script>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <style>
@@ -69,6 +68,6 @@
             </footer>
         </div>
     </div>
-    
+    <script src="js/app.js"></script>
 </body>
 </html>
