--- a/login.html
+++ b/login.html
@@ -5,7 +5,8 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Login</title>
-<link rel="stylesheet" href="/front-end/css/styles.css">
+<script src="js/app.js"></script>
+<link rel="stylesheet" href="/css/styles.css">
 </head>
 <body>
 <h2>Login</h2>
@@ -14,6 +15,5 @@
     <input type="password" id="password" placeholder="Password" required>
     <button type="submit">Login</button>
 </form>
-<script src="app.js"></script>
 </body>
 </html>
