--- a/login.html
+++ b/login.html
@@ -9,11 +9,18 @@
 <link rel="stylesheet" href="/css/styles.css">
 </head>
 <body>
-<h2>Login</h2>
-<form id="loginForm">
-    <input type="text" id="username" placeholder="Username" required>
-    <input type="password" id="password" placeholder="Password" required>
-    <button type="submit">Login</button>
+    <div class="register-container">
+        <!-- Placeholder for logo -->
+        <div class="logo-placeholder">Insert Logo Here</div>
+        <h1>Login</h1>
+        <form id="loginForm">
+            <div class="input-group">
+                <input type="text" id="username" placeholder="Username" required>
+            </div>
+            <input type="password" id="password" placeholder="Password" required>
+            <button type="submit">Login</button>
+    </div>
+
 </form>
 </body>
 </html>
