Add: Login page functionality, now redirects to index page when successfully login. Updated the CSS of Login.html

--- a/index.html
+++ b/index.html
@@ -61,6 +61,8 @@
                     <button onclick="location.href='register.html'" class="join-member-button w-full bg-blue-600 text-white p-2 rounded">
                         Click here to become a Member!
                     </button>
+                    
+                    <p>Already have an account? <a href="login.html">Click here to Login</a></p>
                 </div>                
             </div>
             <footer class="text-center text-gray-600 text-sm py-8">
