--- a/register.html
+++ b/register.html
@@ -24,7 +24,7 @@
         </div>
         <input type="email" id="email" placeholder="Email address" required>
         <input type="text" id="username" placeholder="Username" required>
-        <input type="password" id="password" placeholder="Password" required>
+        <input type="password" id="registerPassword" placeholder="Password" required>
         <input type="password" id="confirmPassword" placeholder="Confirm Password" required>
         <div class="password-criteria">
             <ul>
@@ -36,9 +36,15 @@
         <div id="passwordMatch" style="display: none; color: red;">Passwords do not match!</div>
         <button type="submit">CREATE MY ACCOUNT</button>
     </form>
+
+    <!-- Login link -->
+    <p class="login-link">
+        Already have an account? <a href="login.html">Log In</a>
+    </p>
+
     <div class="security-notes">
-        <p>256-bit AES Encryption</p>
-        <p>Students Trained Certified</p>
+        <p>✔ 256-bit AES Encryption</p>
+        <p>✔ Students Trained Certified</p>
     </div>
 </div>
 
