--- a/login.html
+++ b/login.html
@@ -15,12 +15,18 @@
         <h1>Login</h1>
         <form id="loginForm">
             <div class="input-group">
-                <input type="text" id="username" placeholder="Username" required>
+                <input type="text" id="loginUsername" placeholder="Username" required>
             </div>
-            <input type="password" id="password" placeholder="Password" required>
-            <button type="submit">Login</button>
+            <div class="input-group">
+                <input type="password" id="loginPassword" placeholder="Password" required>
+            </div>
+            <a href="#" id="forgotPassword" class="forgot-password-link">Forgot password?</a>
+            <button type="submit" class="login-button">Login</button>
+            <div id="loginError" style="display:none; color:red;"></div>
+        </form>
+        <div class="additional-links">
+            <p>New user? <a href="register.html">Create an account</a></p>
+        </div>
     </div>
-
-</form>
 </body>
 </html>
