--- a/MakeReview.html
+++ b/MakeReview.html
@@ -15,7 +15,22 @@
         <input type="number" id="courseId" name="courseId" required><br>
         
         <label for="rating">Rating:</label>
-        <input type="number" id="rating" name="rating" min="1" max="5" required><br>
+        <div>
+            <input type="radio" id="star1" name="rating" value="1" required>
+            <label for="star1">1 star</label>
+
+            <input type="radio" id="star2" name="rating" value="2">
+            <label for="star2">2 stars</label>
+
+            <input type="radio" id="star3" name="rating" value="3">
+            <label for="star3">3 stars</label>
+
+            <input type="radio" id="star4" name="rating" value="4">
+            <label for="star4">4 stars</label>
+
+            <input type="radio" id="star5" name="rating" value="5">
+            <label for="star5">5 stars</label>
+        </div><br>
         
         <label for="comment">Comment:</label>
         <textarea id="comment" name="comment" required></textarea><br>
