--- a/dashboard.html
+++ b/dashboard.html
@@ -107,7 +107,7 @@
       <a href="#" class="block py-2.5 px-4 rounded transition duration-200 hover:bg-purple-800">Dashboard</a>
       <a href="#" class="block py-2.5 px-4 rounded transition duration-200 hover:bg-purple-800">Courses</a>
       <a href="#" class="block py-2.5 px-4 rounded transition duration-200 hover:bg-purple-800">Transactions</a>
-      <a href="option.html" class="block py-2.5 px-4 rounded transition duration-200 hover:bg-purple-800">My Reviews</a>
+      <a href="MakeReview.html" class="block py-2.5 px-4 rounded transition duration-200 hover:bg-purple-800">My Reviews</a>
       <a href="#" class="block py-2.5 px-4 rounded transition duration-200 hover:bg-purple-800">Settings</a>
     </div>
 </div>
