Update: toggle sidebar disappearing

--- a/dashboard.html
+++ b/dashboard.html
@@ -76,8 +76,6 @@
 <!-- Top Navigation Bar -->
 <div class="top-nav">
   <div class="menu-btn">
-    <!-- Sidebar Toggle Button -->
-    <button id="sidebarToggle" onclick="toggleSidebar()" class="text-lg text-white p-2 rounded-full"><i class="fas fa-bars"></i></button>
   </div>
   
   <div class="profile-dropdown">
@@ -99,6 +97,9 @@
     </div>
   </div>
 </div>
+
+<!-- Sidebar Toggle Button -->
+<button id="sidebarToggle" onclick="toggleSidebar()" class="bg-purple-700 text-white p-2 rounded-tr-lg rounded-br-lg"><i class="fas fa-bars"></i></button>
 
 <!-- Sidebar -->
 <div class="sidebar bg-purple-700 text-white p-4 rounded-tr-lg rounded-br-lg    ">
