--- a/Courses.html
+++ b/Courses.html
@@ -12,6 +12,20 @@
 <body>
     <h1>Course Management</h1>
 
+    <h2>List of Courses</h2>
+<table class="course-table">
+    <thead>
+        <tr>
+            <th>ID</th>
+            <th>Title</th>
+            <th>Content</th>
+            <th>Price</th>
+        </tr>
+    </thead>
+    <tbody id="courseListBody"></tbody>
+</table>   
+
+    <hr>
     <!-- Create Course Form -->
     <h2>Create Course</h2>
     <form id="createCourseForm">
@@ -20,6 +34,9 @@
         <br>
         <label for="content">Content:</label>
         <textarea id="content" name="content" required></textarea>
+        <br>
+        <label for="price">Price:</label>
+        <input type="number" id="price" name="price" step="0.01" required>
         <br>
         <label for="sectionTitle">Section Title:</label>
         <input type="text" id="sectionTitle" name="sectionTitle">
