added usertype permissions to courses

--- a/dashboard.html
+++ b/dashboard.html
@@ -106,7 +106,7 @@
     <button onclick="toggleSidebar()" class="text-white text-xl mb-4"><i class=""></i></button>
     <div class="space-y-3">
       <a href="#" class="block py-2.5 px-4 rounded transition duration-200 hover:bg-purple-800">Dashboard</a>
-      <a href="#" class="block py-2.5 px-4 rounded transition duration-200 hover:bg-purple-800">Courses</a>
+      <a href="courses.html" class="block py-2.5 px-4 rounded transition duration-200 hover:bg-purple-800">Courses</a>
       <a href="#" class="block py-2.5 px-4 rounded transition duration-200 hover:bg-purple-800">Transactions</a>
       <a href="MakeReview.html" class="block py-2.5 px-4 rounded transition duration-200 hover:bg-purple-800">My Reviews</a>
       <a href="#" class="block py-2.5 px-4 rounded transition duration-200 hover:bg-purple-800">Settings</a>
