Added Edit reviews page and allow for editing of review comments and ratings

--- a/ViewReviews.html
+++ b/ViewReviews.html
@@ -30,6 +30,7 @@
     <thead>
         <tr>
             <th>ID</th>
+
             <th>Course ID</th>
             <th>Rating</th>
             <th>Comment</th>
@@ -41,6 +42,7 @@
         <!-- Reviews will be dynamically added here -->
     </tbody>
 </table>
-
+<!-- Button to navigate to the make review page -->
+<button onclick="window.location.href = 'MakeReview.html';">Make a Review</button>
 </body>
 </html>
