--- a/MakeReview.html
+++ b/MakeReview.html
@@ -5,11 +5,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="js/app.js"></script>
+    <link rel="stylesheet" href="/css/reviews.css">
     <title>Submit Review</title>
 </head>
 <body>
     <h2>Submit a Review</h2>
-    
+    <button class="back-button" onclick="window.location.href = 'ViewReviews.html';">Back to Reviews</button>
     <form id="reviewForm">
         <label for="courseId">Course ID:</label>
         <input type="number" id="courseId" name="courseId" required><br>
