--- a/profile.html
+++ b/profile.html
@@ -3,12 +3,12 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>E-Learning Dashboard</title>
+<title>User Profile</title>
 <script src="js/app.js"></script>
 <script src="https://cdn.tailwindcss.com"></script>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
 <style>
-  .top-nav {
+    .top-nav {
     position: fixed;
     top: 0;
     left: 0;
@@ -56,7 +56,7 @@
     transition: left .5s;
     position: fixed;
     left: 10px; /* Position the toggle button where the sidebar ends */
-    top: 10px; 
+    top: 10px;
     z-index: 1001; /* Ensure the toggle is above other content */
   }
   #content {
@@ -71,56 +71,54 @@
   }
 </style>
 </head>
-<body class="bg-gray-100">
-
+<body>
 <!-- Top Navigation Bar -->
 <div class="top-nav">
-  <div class="menu-btn">
-  </div>
+    <div class="menu-btn">
+    </div>
+    
+    <div class="profile-dropdown">
+      <!-- User Profile Dropdown -->
+      <div class="relative">
+        <button class="flex items-center space-x-2 cursor-pointer" id="userMenuButton" aria-expanded="true" aria-haspopup="true">
+          <img src="https://placehold.co/32x32" alt="User profile placeholder image" class="rounded-full">
+          <span class="user-name text-gray-700">User</span>
+          <span class="user-type text-gray-500">Admin</span>
+          <i class="fas fa-chevron-down text-gray-500"></i>
+        </button>
   
-  <div class="profile-dropdown">
-    <!-- User Profile Dropdown -->
-    <div class="relative">
-      <button class="flex items-center space-x-2 cursor-pointer" id="userMenuButton" aria-expanded="true" aria-haspopup="true">
-        <img src="https://placehold.co/32x32" alt="User profile placeholder image" class="rounded-full">
-        <span class="user-name text-gray-700">User</span>
-        <span class="user-type text-gray-500">Admin</span>
-        <i class="fas fa-chevron-down text-gray-500"></i>
-      </button>
-
-      <!-- Dropdown menu, hidden by default -->
-      <div class="absolute right-0 mt-2 w-56 rounded-md shadow-lg bg-white ring-1 ring-black ring-opacity-5 hidden" role="menu" aria-orientation="vertical" aria-labelledby="userMenuButton">
-        <a href="profile.html" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100" role="menuitem">Your Profile</a>
-        <a href="#" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100" role="menuitem">Settings</a>
-        <a href="#" id="logoutButton" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100" role="menuitem">Sign out</a>
+        <!-- Dropdown menu, hidden by default -->
+        <div class="absolute right-0 mt-2 w-56 rounded-md shadow-lg bg-white ring-1 ring-black ring-opacity-5 hidden" role="menu" aria-orientation="vertical" aria-labelledby="userMenuButton">
+          <a href="#" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100" role="menuitem">Your Profile</a>
+          <a href="#" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100" role="menuitem">Settings</a>
+          <a href="#" id="logoutButton" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100" role="menuitem">Sign out</a>
+        </div>
       </div>
     </div>
   </div>
-</div>
 
 <!-- Sidebar Toggle Button -->
 <button id="sidebarToggle" onclick="toggleSidebar()" class="bg-purple-700 text-white p-2 rounded-tr-lg rounded-br-lg"><i class="fas fa-bars"></i></button>
 
 <!-- Sidebar -->
-<div class="sidebar bg-purple-700 text-white p-4 rounded-tr-lg rounded-br-lg    ">
+<div class="sidebar bg-purple-700 text-white p-4 rounded-tr-lg rounded-br-lg">
     <button onclick="toggleSidebar()" class="text-white text-xl mb-4"><i class=""></i></button>
     <div class="space-y-3">
       <a href="#" class="block py-2.5 px-4 rounded transition duration-200 hover:bg-purple-800">Dashboard</a>
       <a href="courses.html" class="block py-2.5 px-4 rounded transition duration-200 hover:bg-purple-800">Courses</a>
       <a href="#" class="block py-2.5 px-4 rounded transition duration-200 hover:bg-purple-800">Transactions</a>
       <a href="ViewReviews.html" class="block py-2.5 px-4 rounded transition duration-200 hover:bg-purple-800">My Reviews</a>
-      <a href="profile.html" class="block py-2.5 px-4 rounded transition duration-200 hover:bg-purple-800">My Profile</a>
       <a href="#" class="block py-2.5 px-4 rounded transition duration-200 hover:bg-purple-800">Settings</a>
     </div>
 </div>
 
-<!-- Content -->
-<div id="content" class="bg-white p-4">
-  <b>Enrolled Courses</b>
+<!-- Main Content -->
+<div id="content" class="main-content">
+  <!-- User profile content goes here -->
 </div>
 
 <script>
-  function toggleSidebar() {
+    function toggleSidebar() {
     var sidebar = document.querySelector('.sidebar');
     var content = document.getElementById("content");
     var sidebarToggle = document.getElementById("sidebarToggle");
@@ -128,22 +126,21 @@
     sidebar.classList.toggle("sidebar-hidden");
     content.classList.toggle("content-expanded");
     sidebarToggle.classList.toggle("sidebar-toggle-visible");
-  }
-  
-  // Script for handling dropdown
-  document.getElementById('userMenuButton').addEventListener('click', function(event) {
-    this.nextElementSibling.classList.toggle('hidden');
-    event.stopPropagation();
-  });
-
-  document.addEventListener('click', function(event) {
-    var dropdownMenus = document.querySelectorAll('.relative .absolute');
-    dropdownMenus.forEach(function(menu) {
-      if (event.target !== menu && !menu.contains(event.target)) {
-        menu.classList.add('hidden');
-      }
+    }
+    // Script for handling dropdown
+    document.getElementById('userMenuButton').addEventListener('click', function(event) {
+        this.nextElementSibling.classList.toggle('hidden');
+        event.stopPropagation();
     });
-  });
+
+    document.addEventListener('click', function(event) {
+        var dropdownMenus = document.querySelectorAll('.relative .absolute');
+        dropdownMenus.forEach(function(menu) {
+        if (event.target !== menu && !menu.contains(event.target)) {
+            menu.classList.add('hidden');
+        }
+        });
+    });
 </script>
 
 </body>
