--- a/profile.html
+++ b/profile.html
@@ -61,7 +61,7 @@
   }
   #content {
     transition: margin-left .5s;
-    margin-left: 250px; /* Same as the sidebar width */
+    margin-left: 0px; /* Same as the sidebar width */
   }
   .sidebar-hidden {
     margin-left: -250px;
@@ -71,7 +71,7 @@
   }
 </style>
 </head>
-<body>
+<body >
 <!-- Top Navigation Bar -->
 <div class="top-nav">
     <div class="menu-btn">
@@ -113,9 +113,45 @@
 </div>
 
 <!-- Main Content -->
-<div id="content" class="main-content">
-  <!-- User profile content goes here -->
-</div>
+<div class="flex flex-col md:flex-row">
+
+    <div id="main-content" class="flex-1">
+      <div class="main-content pt-24 mx-auto sm:px-6 lg:px-8 max-w-7xl">
+        <div class="bg-white overflow-hidden shadow-sm sm:rounded-lg">
+          <div class="p-6 bg-white border-b border-gray-200">
+            
+            <!-- User Information -->
+            <div class="mb-6">
+              <div class="text-center">
+                <img class="inline-block h-24 w-24 rounded-full" src="https://placehold.co/96x96" alt="User profile image placeholder">
+                <h2 class="text-2xl font-semibold">#    </h2>
+                <p class="text-gray-600">#</p>
+              </div>
+            </div>
+  
+            <!-- Completed Courses Section -->
+            <div class="mb-6">
+              <h3 class="text-lg leading-6 font-medium text-gray-900">Completed Courses</h3>
+              <ul class="mt-5 grid grid-cols-1 gap-5 sm:gap-6 sm:grid-cols-2 lg:grid-cols-3">
+                <!-- Dynamically load courses here -->
+                <!-- Example Course -->
+                <li class="col-span-1 flex shadow-sm rounded-md">
+                  <div class="flex-shrink-0 flex items-center justify-center w-16 bg-purple-600 text-white text-sm font-medium rounded-l-md">IT</div>
+                  <div class="flex-1 flex items-center justify-between border-t border-r border-b border-gray-200 bg-white rounded-r-md truncate">
+                    <div class="flex-1 px-4 py-2 text-sm truncate">
+                      <a href="#" class="text-gray-900 font-medium hover:text-gray-600">Information Technology</a>
+                      <p class="text-gray-500">10 Feb 2016</p>
+                    </div>
+                  </div>
+                </li>
+                <!-- Repeat for each completed course -->
+              </ul>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>    
 
 <script>
     function toggleSidebar() {
