Add: User setting page

--- a/profile.html
+++ b/profile.html
@@ -104,11 +104,12 @@
 <div class="sidebar bg-purple-700 text-white p-4 rounded-tr-lg rounded-br-lg">
     <button onclick="toggleSidebar()" class="text-white text-xl mb-4"><i class=""></i></button>
     <div class="space-y-3">
-      <a href="#" class="block py-2.5 px-4 rounded transition duration-200 hover:bg-purple-800">Dashboard</a>
+      <a href="dashboard.html" class="block py-2.5 px-4 rounded transition duration-200 hover:bg-purple-800">Dashboard</a>
       <a href="courses.html" class="block py-2.5 px-4 rounded transition duration-200 hover:bg-purple-800">Courses</a>
       <a href="#" class="block py-2.5 px-4 rounded transition duration-200 hover:bg-purple-800">Transactions</a>
       <a href="ViewReviews.html" class="block py-2.5 px-4 rounded transition duration-200 hover:bg-purple-800">My Reviews</a>
-      <a href="#" class="block py-2.5 px-4 rounded transition duration-200 hover:bg-purple-800">Settings</a>
+      <a href="profile.html" class="block py-2.5 px-4 rounded transition duration-200 hover:bg-purple-800">My Profile</a>
+      <a href="settings.html" class="block py-2.5 px-4 rounded transition duration-200 hover:bg-purple-800">Settings</a>
     </div>
 </div>
 
@@ -124,8 +125,11 @@
             <div class="mb-6">
               <div class="text-center">
                 <img class="inline-block h-24 w-24 rounded-full" src="https://placehold.co/96x96" alt="User profile image placeholder">
-                <h2 class="text-2xl font-semibold">#    </h2>
-                <p class="text-gray-600">#</p>
+                <h2 class="text-2xl font-semibold"></h2> <!-- User's Name-->
+                <p class="text-gray-600"></p> <!-- User's User type-->
+                <a href="settings.html" class="text-gray-600 hover:text-gray-800">
+                  <i class="fas fa-pencil-alt"></i>
+                </a>
               </div>
             </div>
   
