--- a/dashboard.html
+++ b/dashboard.html
@@ -105,12 +105,12 @@
 <div class="sidebar bg-purple-700 text-white p-4 rounded-tr-lg rounded-br-lg    ">
     <button onclick="toggleSidebar()" class="text-white text-xl mb-4"><i class=""></i></button>
     <div class="space-y-3">
-      <a href="#" class="block py-2.5 px-4 rounded transition duration-200 hover:bg-purple-800">Dashboard</a>
+      <a href="dashboard.html" class="block py-2.5 px-4 rounded transition duration-200 hover:bg-purple-800">Dashboard</a>
       <a href="courses.html" class="block py-2.5 px-4 rounded transition duration-200 hover:bg-purple-800">Courses</a>
       <a href="#" class="block py-2.5 px-4 rounded transition duration-200 hover:bg-purple-800">Transactions</a>
       <a href="ViewReviews.html" class="block py-2.5 px-4 rounded transition duration-200 hover:bg-purple-800">My Reviews</a>
       <a href="profile.html" class="block py-2.5 px-4 rounded transition duration-200 hover:bg-purple-800">My Profile</a>
-      <a href="#" class="block py-2.5 px-4 rounded transition duration-200 hover:bg-purple-800">Settings</a>
+      <a href="settings.html" class="block py-2.5 px-4 rounded transition duration-200 hover:bg-purple-800">Settings</a>
     </div>
 </div>
 
