--- a/profile.html
+++ b/profile.html
@@ -8,7 +8,7 @@
 <script src="https://cdn.tailwindcss.com"></script>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
 <style>
-    .top-nav {
+  .top-nav {
     position: fixed;
     top: 0;
     left: 0;
@@ -71,7 +71,8 @@
   }
 </style>
 </head>
-<body >
+<body class="bg-gray-100">
+  
 <!-- Top Navigation Bar -->
 <div class="top-nav">
     <div class="menu-btn">
@@ -143,7 +144,7 @@
                   <div class="flex-shrink-0 flex items-center justify-center w-16 bg-purple-600 text-white text-sm font-medium rounded-l-md">IT</div>
                   <div class="flex-1 flex items-center justify-between border-t border-r border-b border-gray-200 bg-white rounded-r-md truncate">
                     <div class="flex-1 px-4 py-2 text-sm truncate">
-                      <a href="#" class="text-gray-900 font-medium hover:text-gray-600">Information Technology</a>
+                      <a href="#" class="text-gray-900 font-medium hover:text-gray-600">Emerging Trends in IT</a>
                       <p class="text-gray-500">10 Feb 2016</p>
                     </div>
                   </div>
