--- a/settings.html
+++ b/settings.html
@@ -125,19 +125,19 @@
                 <div class="flex justify-between pb-8">
                   <h1 class="font-semibold text-2xl">User Profile Settings</h1>
                 </div>
-                <form action="#" method="POST">
+                <form id="profileUpdateForm" action="#" method="POST">
                   <div class="flex flex-wrap -mx-3 mb-6">
                     <div class="w-full md:w-1/2 px-3 mb-6 md:mb-0">
                       <label class="block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2" for="first-name">
                         First Name
                       </label>
-                      <input class="appearance-none block w-full bg-gray-200 text-gray-700 border border-gray-200 rounded py-3 px-4 mb-3 leading-tight focus:outline-none focus:bg-white" id="first-name" type="text" placeholder="User" required>
+                      <input class="appearance-none block w-full bg-gray-200 text-gray-700 border border-gray-200 rounded py-3 px-4 mb-3 leading-tight focus:outline-none focus:bg-white" id="first-name" type="text" placeholder="User">
                     </div>
                     <div class="w-full md:w-1/2 px-3">
                       <label class="block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2" for="last-name">
                         Last Name
                       </label>
-                      <input class="appearance-none block w-full bg-gray-200 text-gray-700 border border-gray-200 rounded py-3 px-4 leading-tight focus:outline-none focus:bg-white focus:border-gray-500" id="last-name" type="User" placeholder="User" required>
+                      <input class="appearance-none block w-full bg-gray-200 text-gray-700 border border-gray-200 rounded py-3 px-4 leading-tight focus:outline-none focus:bg-white focus:border-gray-500" id="last-name" type="User" placeholder="User">
                     </div>
                   </div>
                   <div class="flex flex-wrap -mx-3 mb-6">
@@ -145,21 +145,7 @@
                       <label class="block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2" for="email">
                         Email
                       </label>
-                      <input class="appearance-none block w-full bg-gray-200 text-gray-700 border border-gray-200 rounded py-3 px-4 leading-tight focus:outline-none focus:bg-white focus:border-gray-500" id="email" type="email" placeholder="user@gmail.com" required>
-                    </div>
-                  </div>
-                  <div class="flex flex-wrap -mx-3 mb-6">
-                    <div class="w-full md:w-1/2 px-3 mb-6 md:mb-0">
-                      <label class="block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2" for="password">
-                        New Password
-                      </label>
-                      <input class="appearance-none block w-full bg-gray-200 text-gray-700 border border-gray-200 rounded py-3 px-4 mb-3 leading-tight focus:outline-none focus:bg-white focus:border-gray-500" id="password" type="password" required>
-                    </div>
-                    <div class="w-full md:w-1/2 px-3">
-                      <label class="block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2" for="confirm-password">
-                        Confirm Password
-                      </label>
-                      <input class="appearance-none block w-full bg-gray-200 text-gray-700 border border-gray-200 rounded py-3 px-4 leading-tight focus:outline-none focus:bg-white focus:border-gray-500" id="confirm-password" type="password" required>
+                      <input class="appearance-none block w-full bg-gray-200 text-gray-700 border border-gray-200 rounded py-3 px-4 leading-tight focus:outline-none focus:bg-white focus:border-gray-500" id="email" type="email" placeholder="user@gmail.com">
                     </div>
                   </div>
                   <div class="flex justify-end">
@@ -169,6 +155,34 @@
                   </div>
                 </form>
               </div>
+            </div>
+            <div class="change-password-form bg-white shadow-md rounded px-8 pt-6 pb-8 mb-4">
+              <h2 class="font-semibold text-2xl mb-4">Change Password</h2>
+              <form id="passwordChangeForm">
+                  <div class="mb-4">
+                      <label class="block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2" for="current-password">
+                          Current Password
+                      </label>
+                      <input class="appearance-none block w-full bg-gray-200 text-gray-700 border border-gray-200 rounded py-3 px-4 leading-tight focus:outline-none focus:bg-white focus:border-gray-500" id="current-password" type="password" required>
+                  </div>
+                  <div class="mb-4">
+                      <label class="block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2" for="new-password">
+                          New Password
+                      </label>
+                      <input class="appearance-none block w-full bg-gray-200 text-gray-700 border border-gray-200 rounded py-3 px-4 leading-tight focus:outline-none focus:bg-white focus:border-gray-500" id="new-password" type="password" required>
+                  </div>
+                  <div class="mb-6">
+                      <label class="block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2" for="confirm-new-password">
+                          Confirm New Password
+                      </label>
+                      <input class="appearance-none block w-full bg-gray-200 text-gray-700 border border-gray-200 rounded py-3 px-4 leading-tight focus:outline-none focus:bg-white focus:border-gray-500" id="confirm-new-password" type="password" required>
+                  </div>
+                  <div class="flex items-center justify-end">
+                      <button class="shadow bg-purple-500 hover:bg-purple-400 focus:shadow-outline focus:outline-none text-white font-bold py-2 px-4 rounded" type="submit">
+                          Change Password
+                      </button>
+                  </div>
+              </form>
             </div>
           </div>
       </div>
