--- a/dashboard.html
+++ b/dashboard.html
@@ -107,6 +107,7 @@
     <div class="space-y-3">
       <a href="#" class="block py-2.5 px-4 rounded transition duration-200 hover:bg-purple-800">Dashboard</a>
       <a href="courses.html" class="block py-2.5 px-4 rounded transition duration-200 hover:bg-purple-800">Courses</a>
+      <a href="Enrollment.html" class="block py-2.5 px-4 rounded transition duration-200 hover:bg-purple-800">Enrollment</a>
       <a href="#" class="block py-2.5 px-4 rounded transition duration-200 hover:bg-purple-800">Transactions</a>
       <a href="ViewReviews.html" class="block py-2.5 px-4 rounded transition duration-200 hover:bg-purple-800">My Reviews</a>
       <a href="#" class="block py-2.5 px-4 rounded transition duration-200 hover:bg-purple-800">Settings</a>
@@ -115,7 +116,6 @@
 
 <!-- Content -->
 <div id="content" class="bg-white p-4">
-  <b>Enrolled Courses</b>
 </div>
 
 <script>
