--- a/Enrollment.html
+++ b/Enrollment.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Course Enrollment</title>
+    <link rel="stylesheet" href="/css/enrollment.css">
 </head>
 <body>
     <h1>Course Enrollment</h1>
