--- a/payment.html
+++ b/payment.html
@@ -3,99 +3,28 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Stripe Checkout Example</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            background-color: #f5f5f5;
-            flex-direction: column;
-        }
-        .container {
-            width: 400px;
-            padding: 2rem;
-            background-color: #fff;
-            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-        }
-        label {
-            display: block;
-            font-size: 0.9rem;
-            margin-bottom: 0.2rem;
-            color: #555;
-            text-transform: uppercase;
-        }
-        input[type="text"], input[type="email"] {
-            display: block;
-            width: 100%;
-            padding: 0.5rem;
-            font-size: 1rem;
-            border: 1px solid #ddd;
-            border-radius: 4px;
-            margin-bottom: 1rem;
-        }
-        input[type="submit"] {
-            display: block;
-            width: 100%;
-            padding: 0.5rem;
-            font-size: 1rem;
-            background-color: #0070f3;
-            border: none;
-            border-radius: 4px;
-            color: #fff;
-            cursor: pointer;
-        }
-        input[type="submit"]:hover {
-            background-color: #0057a5;
-        }
-    </style>
+    <title>Payment Page</title>
+    <link rel="stylesheet" href="payment.css">
 </head>
 <body>
     <div class="container">
-        <h1>Checkout</h1>
-        <form id="payment-form">
-            <label for="email">Email</label>
-            <input type="email" id="email" name="email" required>
-            <label for="name">Name</label>
-            <input type="text" id="name" name="name" required>
-            <button type="submit">Pay</button>
-        </form>
+        <h2>Payment Details</h2>
+        <div class="form-container">
+            <label for="card-element">
+                Credit or debit card
+            </label>
+            <div id="card-element">
+                <!-- A Stripe Element will be inserted here. -->
+            </div>
+
+            <!-- Used to display form errors. -->
+            <div id="card-errors" role="alert"></div>
+
+            <button id="submit">Submit Payment</button>
+        </div>
     </div>
 
-    <!-- Include the Stripe JavaScript library -->
     <script src="https://js.stripe.com/v3/"></script>
-
-    <script>
-        // Your Stripe publishable key
-        const stripe = Stripe('pk_test_51KUQmKFmWCKB31rkR92GUPHeXv45rzjur4xWi7x4x9Sv0MgNABL7j4yRQkNM5NmzFKpyKvMXcPAt1BpBgjFUZQQU00kjLnTu01');
-
-        // Create a checkout session
-        const checkoutSession = {
-            // Replace this with the actual session ID from your server
-            id: 'cs_test_1234567890abcdef',
-            // The URL to redirect customers to after a successful payment
-            success_url: 'https://example.com/success',
-            // The URL to redirect customers to if the payment fails
-            cancel_url: 'https://example.com/cancel',
-        };
-
-        // Create a payment form
-        const paymentForm = document.getElementById('payment-form');
-        paymentForm.addEventListener('submit', async (event) => {
-            event.preventDefault();
-
-            // Create a PaymentIntent
-            const { client_secret } = await fetch('/create-payment-intent', {
-                method: 'POST',
-                headers: { 'Content-Type': 'application/json' },
-                body: JSON.stringify({ items: [{ id: 'item1' }] }),
-            }).then((response) => response.json());
-
-            // Redirect to the Stripe Checkout page
-            const { error } = await stripe.redirectToCheckout({
-                sessionId: checkout
+    <script src="client.js" defer></script>
+</body>
+</html>
